# hgr

./: .gitignore  CHANGELOG.md  README.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  autoresearch_config.json  benchmark_dpo.py  dpo_full_clean_config.json  dpo_only_config.json  dpo_only_iterations.jsonl  dpo_only_iterations.md  evaluate_stage2.py  local_stage2_data.py  main.py  modal_benchmark_bleu.py  modal_evaluate_stage1_same_protocol_tunable.py  modal_evaluate_stage2_same_protocol.py  modal_stage1.py  modal_stage1_clean_tuned.py  modal_stage1_decode_sweep.py  modal_stage2_data.py  modal_stage2_data_full_clean.py  modal_stage2_dpo_train.py  modal_stage2_train.py  pyproject.toml  sample_dataset.py  stage1_eval_config.json
outputs/: full_data_cleaning_report.md  stage2_same_protocol_comparison.md
scripts/: clean_parallel_data.py
scripts/debug/: debug_gen.py  debug_hgr_weight.py  run_stage1.sh  test_simple_peft.py
src/hgr/: config.py
src/hgr/data/: dataset_info.json  prepare.py
src/hgr/evaluation/: metrics.py
src/hgr/rewards/: base.py  bleurt_reward.py  comet_reward.py  factory.py  hgr_reward.py
src/hgr/training/: combined.py  dpo.py  hgr.py
