[project]
name = "hgr"
version = "0.1.0"
description = "Enhancing Low-Resource Indian Language MT using LLMs with DPO and Hypergeometric-Gamma Reward"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core deep learning
    "torch>=2.2.2",
    # Transformers & TRL (DPO trainer)
    "transformers>=4.39.3",
    "trl>=0.8.0",
    # Tokenization
    "sentencepiece>=0.2.0",
    "sacremoses>=0.1.1",
    # Quantization
    "bitsandbytes>=0.41.2",
    # Sentence-BERT for HGR rewards
    "sentence-transformers>=2.6.0",
    # Datasets
    "datasets>=2.18.0",
    # Evaluation metrics
    "sacrebleu>=2.4.0",
    "nltk>=3.8.0",
    "bert-score>=0.3.13",
    # Utilities
    "tqdm>=4.65.0",
    "scipy>=1.12.0",
    "accelerate>=0.28.0",
    "peft>=0.10.0",
    "protobuf>=7.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
